# learn-rust

./: .gitignore  Cargo.toml  README.md  RELEASE_V1.0.0.md  docker-compose.yml  prometheus.yml  rust-toolchain.toml
.cargo/: config.toml
.kilocode/rules/: PROJECT.MD
docker/: Dockerfile  Dockerfile.dev  nginx.conf
docs/: API-SPECIFICATION.md  ARCHITECTURE.md  DATABASE-SCHEMA.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT-GUIDE.md  PRE-FLIGHT-EXECUTION-PLAN.md  PRODUCTION-READINESS-ASSESSMENT.md  SECURITY-BASELINE.md  TECHNICAL-SPECIFICATION.md
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: auth.rs  mod.rs  users.rs
src/business/: mod.rs
src/business/entities/: mod.rs  user.rs
src/business/services/: auth_service.rs  mod.rs
src/config/: app.rs  cache.rs  database.rs  mod.rs
src/data/: mod.rs
src/data/migrations/: mod.rs
src/data/models/: mod.rs
src/data/repositories/: mod.rs  user_repository.rs
src/error/: app_error.rs  error_handler.rs  mod.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  security.rs  tracing.rs
src/services/: mod.rs
src/services/cache/: mod.rs
src/services/email/: mod.rs
tests/: mod.rs
tests/integration/: auth_test.rs  helpers.rs  mod.rs  users_test.rs
tests/unit/: jwt_test.rs  mod.rs  password_test.rs  user_entity_test.rs
