[workspace]
members = ["."]
resolver = "2"

[package]
name = "rust-backend-framework"
version = "0.1.0"
edition = "2021"
authors = ["Development Team <dev@example.com>"]
license = "MIT"
description = "Production-ready Rust backend framework using Actix-web"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.10"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Database & ORM
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }

# Cache & Session
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "rustls-tls"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async Utilities
futures = "0.3"
async-trait = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Password & Crypto
argon2 = "0.5"
ring = "0.17"
rustls = "0.23"
base64 = "0.22"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }

# API Documentation
utoipa = "4.2"
utoipa-swagger-ui = "7.1"

# Metrics & Monitoring
metrics = "0.22"
prometheus-client = "0.22"

# Middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compress", "rate-limit"] }

# Image Processing
image = "0.25"
oxipng = "9.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# System Utilities
once_cell = "1.20"
lazy_static = "1.5"
parking_lot = "0.12"

# JWT Authentication
jsonwebtoken = "9.3"

# Additional Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
# Unit & Integration Testing
pretty_assertions = "1.4"
proptest = "1.5"
trybuild = "1.0"

# Mocking
mockall = "0.13"
mockall_double = "0.3"

# Property-Based Testing
quickcheck = "1.0"

# Database Testing
testcontainers = "0.23"

# HTTP Testing
wiremock = "0.6"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
incremental = true
overflow-checks = true
